# benchstats

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/benchstats/: __main__.py  cli_parser.py  common.py  compare.py  parser_GbenchJson.py  qbench.py  render.py
tests/: test_compare.py  test_qbench.py
