[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# https://realpython.com/pypi-publish-python-package/

[project]
name = "benchstats"
version = "1.0.0"
description = "Statistical Testing for Benchmark Results Comparison"
readme = "README.md"
authors = [{ name = "Aleksei Rechinskii", email = "5dpea9nhd@mozmail.com" }]
# license = { file = "LICENSE" }
classifiers = [
#    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = ["benchmarks", "statistics", "reports", "analysis"]

dependencies = [
    "rich",
    "numpy",
    "scipy",
]
requires-python = ">=3.10"
# due to using | in type hinting.

[project.urls]
Homepage = "https://github.com/Arech/benchstats"

[project.scripts]
benchstats = "benchstats.__main__:main"

[tool.black]
line-length = 100
target-version = ['py311']
